--- a/app/challenge/challengelist.component.html
+++ b/app/challenge/challengelist.component.html
@@ -3,6 +3,7 @@
         <figure>
             <img [src]="challenge.imageUrl" alt=""/>
             <figcaption>{{ challenge.caption }}</figcaption>
+            <label><input [value]="test" type="text"></label>
         </figure>
         <div class="ch-state">
             <p class="ch-startDate">{{ challenge.startDate }}</p>
@@ -14,7 +15,8 @@
             <p class="ch-difficult">Сложность челленджа:</p>
             <div class="ch-diffBox">
                 <p class="ch-diffDecrease">-</p>
-                <label><input class="ch-diffValue"/></label>
+                <label><input [(ngModel)]="challenge.difficultLevel"
+                             (change)="seeInside(challenge.difficultLevel)" class="ch-diffValue"/></label>
                 <p class="ch-diffIncrease">+</p>
             </div>
         </div>
